[gd_scene load_steps=7 format=3 uid="uid://c8d7s8hi0lqev"]

[ext_resource type="Script" path="res://Scripts/SettingScreen.gd" id="1_dg5ts"]
[ext_resource type="Texture2D" uid="uid://4qlulc0nd27e" path="res://Assets/Setting.png" id="2_c0ctj"]
[ext_resource type="Texture2D" uid="uid://6dv1al4xfasc" path="res://Assets/SoundsPop.png" id="3_ffyqp"]
[ext_resource type="Texture2D" uid="uid://dy0ju8tsv4li4" path="res://Assets/ControlsPop.png" id="4_n5ur7"]
[ext_resource type="Texture2D" uid="uid://bfaymoa04wi8w" path="res://Assets/CreditsPop.png" id="5_1taw1"]
[ext_resource type="Texture2D" uid="uid://cvnqg6obscdej" path="res://Assets/BackPop.png" id="6_0kpgo"]

[node name="SettingsScreen" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_dg5ts")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1919.0
offset_bottom = 1073.0
texture = ExtResource("2_c0ctj")

[node name="SoundsOv" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 815.0
offset_top = 384.0
offset_right = 1114.0
offset_bottom = 483.0
texture = ExtResource("3_ffyqp")

[node name="ControlsOv" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 812.0
offset_top = 501.0
offset_right = 1109.0
offset_bottom = 594.0
texture = ExtResource("4_n5ur7")

[node name="CreditsOv" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 815.0
offset_top = 611.0
offset_right = 1113.0
offset_bottom = 705.0
texture = ExtResource("5_1taw1")

[node name="BackOv" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 1705.0
offset_top = 28.0
offset_right = 1868.0
offset_bottom = 100.0
texture = ExtResource("6_0kpgo")

[node name="Sound" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 826.0
offset_top = 387.0
offset_right = 1111.0
offset_bottom = 473.0

[node name="Control" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 820.0
offset_top = 502.0
offset_right = 1105.0
offset_bottom = 588.0

[node name="Credits" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 822.0
offset_top = 613.0
offset_right = 1107.0
offset_bottom = 699.0

[node name="Back" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 1707.0
offset_top = 30.0
offset_right = 1863.0
offset_bottom = 95.0

[connection signal="mouse_entered" from="Sound" to="." method="_on_sound_mouse_entered"]
[connection signal="mouse_exited" from="Sound" to="." method="_on_sound_mouse_exited"]
[connection signal="mouse_entered" from="Control" to="." method="_on_control_mouse_entered"]
[connection signal="mouse_exited" from="Control" to="." method="_on_control_mouse_exited"]
[connection signal="pressed" from="Control" to="." method="_on_control_pressed"]
[connection signal="mouse_entered" from="Credits" to="." method="_on_credits_mouse_entered"]
[connection signal="mouse_exited" from="Credits" to="." method="_on_credits_mouse_exited"]
[connection signal="pressed" from="Credits" to="." method="_on_credits_pressed"]
[connection signal="mouse_entered" from="Back" to="." method="_on_back_mouse_entered"]
[connection signal="mouse_exited" from="Back" to="." method="_on_back_mouse_exited"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
